zero-cost-templating/tests/ui/compile_fail/must_use.stderr
error: unused `Template` that must be used
  --> tests/ui/compile_fail/must_use.rs:10:1
   |
10 | #[template_stream("test.html.hbs")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/compile_fail/must_use.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(unused_must_use)]` implied by `#[deny(warnings)]`
   = note: this error originates in the attribute macro `template_stream` (in Nightly builds, run with -Z macro-backtrace for more info)
